@@ -387,389 +387,389 @@
 (defconst ew:reduction-table
   (vector
     '()
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($2 (aref stack (- sp 1)))
              ($1 (aref stack (- sp 3))))
           (accept $1)))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($3 (aref stack (- sp 1)))
              ($2 (aref stack (- sp 3)))
              ($1 (aref stack (- sp 5))))
           (lr-push stack (- sp 6) 1 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($3 (aref stack (- sp 1)))
              ($2 (aref stack (- sp 3)))
              ($1 (aref stack (- sp 5))))
           (lr-push stack (- sp 6) 1 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($3 (aref stack (- sp 1)))
              ($2 (aref stack (- sp 3)))
              ($1 (aref stack (- sp 5))))
           (lr-push stack (- sp 6) 1 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($3 (aref stack (- sp 1)))
              ($2 (aref stack (- sp 3)))
              ($1 (aref stack (- sp 5))))
           (lr-push stack (- sp 6) 1 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($3 (aref stack (- sp 1)))
              ($2 (aref stack (- sp 3)))
              ($1 (aref stack (- sp 5))))
           (lr-push stack (- sp 6) 1 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($3 (aref stack (- sp 1)))
              ($2 (aref stack (- sp 3)))
              ($1 (aref stack (- sp 5))))
           (lr-push stack (- sp 6) 1 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($3 (aref stack (- sp 1)))
              ($2 (aref stack (- sp 3)))
              ($1 (aref stack (- sp 5))))
           (lr-push stack (- sp 6) 1 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* ()
           (lr-push stack (- sp 0) 2 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($1 (aref stack (- sp 1))))
           (lr-push stack (- sp 2) 2 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($1 (aref stack (- sp 1))))
           (lr-push stack (- sp 2) 3 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($3 (aref stack (- sp 1)))
              ($2 (aref stack (- sp 3)))
              ($1 (aref stack (- sp 5))))
           (lr-push stack (- sp 6) 3 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($1 (aref stack (- sp 1))))
           (lr-push stack (- sp 2) 4 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($1 (aref stack (- sp 1))))
           (lr-push stack (- sp 2) 4 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($3 (aref stack (- sp 1)))
              ($2 (aref stack (- sp 3)))
              ($1 (aref stack (- sp 5))))
           (lr-push stack (- sp 6) 5 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($3 (aref stack (- sp 1)))
              ($2 (aref stack (- sp 3)))
              ($1 (aref stack (- sp 5))))
           (lr-push stack (- sp 6) 6 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($4 (aref stack (- sp 1)))
              ($3 (aref stack (- sp 3)))
              ($2 (aref stack (- sp 5)))
              ($1 (aref stack (- sp 7))))
           (lr-push stack (- sp 8) 7 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($2 (aref stack (- sp 1)))
              ($1 (aref stack (- sp 3))))
           (lr-push stack (- sp 4) 7 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($1 (aref stack (- sp 1))))
           (lr-push stack (- sp 2) 8 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($3 (aref stack (- sp 1)))
              ($2 (aref stack (- sp 3)))
              ($1 (aref stack (- sp 5))))
           (lr-push stack (- sp 6) 8 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($1 (aref stack (- sp 1))))
           (lr-push stack (- sp 2) 9 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($4 (aref stack (- sp 1)))
              ($3 (aref stack (- sp 3)))
              ($2 (aref stack (- sp 5)))
              ($1 (aref stack (- sp 7))))
           (lr-push stack (- sp 8) 10 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($3 (aref stack (- sp 1)))
              ($2 (aref stack (- sp 3)))
              ($1 (aref stack (- sp 5))))
           (lr-push stack (- sp 6) 11 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($5 (aref stack (- sp 1)))
              ($4 (aref stack (- sp 3)))
              ($3 (aref stack (- sp 5)))
              ($2 (aref stack (- sp 7)))
              ($1 (aref stack (- sp 9))))
           (lr-push stack (- sp 10) 11 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($1 (aref stack (- sp 1))))
           (lr-push stack (- sp 2) 12 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($3 (aref stack (- sp 1)))
              ($2 (aref stack (- sp 3)))
              ($1 (aref stack (- sp 5))))
           (lr-push stack (- sp 6) 12 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($1 (aref stack (- sp 1))))
           (lr-push stack (- sp 2) 13 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($2 (aref stack (- sp 1)))
              ($1 (aref stack (- sp 3))))
           (lr-push stack (- sp 4) 13 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($1 (aref stack (- sp 1))))
           (lr-push stack (- sp 2) 13 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* ()
           (lr-push stack (- sp 0) 14 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($1 (aref stack (- sp 1))))
           (lr-push stack (- sp 2) 14 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($1 (aref stack (- sp 1))))
           (lr-push stack (- sp 2) 15 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($3 (aref stack (- sp 1)))
              ($2 (aref stack (- sp 3)))
              ($1 (aref stack (- sp 5))))
           (lr-push stack (- sp 6) 15 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($1 (aref stack (- sp 1))))
           (lr-push stack (- sp 2) 16 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($3 (aref stack (- sp 1)))
              ($2 (aref stack (- sp 3)))
              ($1 (aref stack (- sp 5))))
           (lr-push stack (- sp 6) 17 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($1 (aref stack (- sp 1))))
-          (lr-push stack (- sp 2) 18 goto-table (ew-mark-phrase (car $1) (cdr $1)))))
-    (lambda (stack sp goto-table $lookahead)
+          (lr-push stack (- sp 2) 18 goto-table (ew-mark-phrase $1 $look))))
+    (lambda (stack sp goto-table $look)
       (let* (($1 (aref stack (- sp 1))))
           (lr-push stack (- sp 2) 19 goto-table $1)))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($2 (aref stack (- sp 1)))
              ($1 (aref stack (- sp 3))))
-          (lr-push stack (- sp 4) 19 goto-table (cons (car $1) (cdr $2)))))
-    (lambda (stack sp goto-table $lookahead)
+          (lr-push stack (- sp 4) 19 goto-table $1)))
+    (lambda (stack sp goto-table $look)
       (let* (($2 (aref stack (- sp 1)))
              ($1 (aref stack (- sp 3))))
           (lr-push stack (- sp 4) 20 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($2 (aref stack (- sp 1)))
              ($1 (aref stack (- sp 3))))
           (lr-push stack (- sp 4) 21 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($4 (aref stack (- sp 1)))
              ($3 (aref stack (- sp 3)))
              ($2 (aref stack (- sp 5)))
              ($1 (aref stack (- sp 7))))
           (lr-push stack (- sp 8) 21 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($4 (aref stack (- sp 1)))
              ($3 (aref stack (- sp 3)))
              ($2 (aref stack (- sp 5)))
              ($1 (aref stack (- sp 7))))
           (lr-push stack (- sp 8) 22 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* ()
           (lr-push stack (- sp 0) 23 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($1 (aref stack (- sp 1))))
           (lr-push stack (- sp 2) 23 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($1 (aref stack (- sp 1))))
           (lr-push stack (- sp 2) 24 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($1 (aref stack (- sp 1))))
           (lr-push stack (- sp 2) 24 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($2 (aref stack (- sp 1)))
              ($1 (aref stack (- sp 3))))
           (lr-push stack (- sp 4) 25 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($1 (aref stack (- sp 1))))
           (lr-push stack (- sp 2) 26 goto-table $1)))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($1 (aref stack (- sp 1))))
           (lr-push stack (- sp 2) 26 goto-table $1)))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($1 (aref stack (- sp 1))))
           (lr-push stack (- sp 2) 27 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* ()
           (lr-push stack (- sp 0) 28 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($1 (aref stack (- sp 1))))
           (lr-push stack (- sp 2) 28 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* ()
           (lr-push stack (- sp 0) 29 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($1 (aref stack (- sp 1))))
           (lr-push stack (- sp 2) 29 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($1 (aref stack (- sp 1))))
           (lr-push stack (- sp 2) 30 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($3 (aref stack (- sp 1)))
              ($2 (aref stack (- sp 3)))
              ($1 (aref stack (- sp 5))))
           (lr-push stack (- sp 6) 30 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($1 (aref stack (- sp 1))))
           (lr-push stack (- sp 2) 31 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($3 (aref stack (- sp 1)))
              ($2 (aref stack (- sp 3)))
              ($1 (aref stack (- sp 5))))
           (lr-push stack (- sp 6) 31 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($1 (aref stack (- sp 1))))
           (lr-push stack (- sp 2) 32 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($3 (aref stack (- sp 1)))
              ($2 (aref stack (- sp 3)))
              ($1 (aref stack (- sp 5))))
           (lr-push stack (- sp 6) 32 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* ()
-          (lr-push stack (- sp 0) 33 goto-table nil)))
-    (lambda (stack sp goto-table $lookahead)
+          (lr-push stack (- sp 0) 33 goto-table ())))
+    (lambda (stack sp goto-table $look)
       (let* (($2 (aref stack (- sp 1)))
              ($1 (aref stack (- sp 3))))
-          (lr-push stack (- sp 4) 33 goto-table (cons (if $1 (car $1) $2) $2))))
-    (lambda (stack sp goto-table $lookahead)
+          (lr-push stack (- sp 4) 33 goto-table ())))
+    (lambda (stack sp goto-table $look)
       (let* (($2 (aref stack (- sp 1)))
              ($1 (aref stack (- sp 3))))
-          (lr-push stack (- sp 4) 33 goto-table (cons (if $1 (car $1) $2) $2))))
-    (lambda (stack sp goto-table $lookahead)
+          (lr-push stack (- sp 4) 33 goto-table ())))
+    (lambda (stack sp goto-table $look)
       (let* (($2 (aref stack (- sp 1)))
              ($1 (aref stack (- sp 3))))
-          (lr-push stack (- sp 4) 33 goto-table (cons (if $1 (car $1) (car $2)) (cdr $2)))))
-    (lambda (stack sp goto-table $lookahead)
+          (lr-push stack (- sp 4) 33 goto-table ())))
+    (lambda (stack sp goto-table $look)
       (let* (($2 (aref stack (- sp 1)))
              ($1 (aref stack (- sp 3))))
           (lr-push stack (- sp 4) 34 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($2 (aref stack (- sp 1)))
              ($1 (aref stack (- sp 3))))
           (lr-push stack (- sp 4) 35 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($2 (aref stack (- sp 1)))
              ($1 (aref stack (- sp 3))))
           (lr-push stack (- sp 4) 36 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($2 (aref stack (- sp 1)))
              ($1 (aref stack (- sp 3))))
           (lr-push stack (- sp 4) 37 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($2 (aref stack (- sp 1)))
              ($1 (aref stack (- sp 3))))
           (lr-push stack (- sp 4) 38 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($2 (aref stack (- sp 1)))
              ($1 (aref stack (- sp 3))))
           (lr-push stack (- sp 4) 39 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($2 (aref stack (- sp 1)))
              ($1 (aref stack (- sp 3))))
           (lr-push stack (- sp 4) 40 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($2 (aref stack (- sp 1)))
              ($1 (aref stack (- sp 3))))
-          (lr-push stack (- sp 4) 41 goto-table (cons (car $1) (if $2 (cdr $2) (cdr $1))))))
-    (lambda (stack sp goto-table $lookahead)
+          (lr-push stack (- sp 4) 41 goto-table $1)))
+    (lambda (stack sp goto-table $look)
       (let* (($2 (aref stack (- sp 1)))
              ($1 (aref stack (- sp 3))))
           (lr-push stack (- sp 4) 42 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($2 (aref stack (- sp 1)))
              ($1 (aref stack (- sp 3))))
-          (lr-push stack (- sp 4) 43 goto-table (cons $1 (if $2 (cdr $2) $1)))))
-    (lambda (stack sp goto-table $lookahead)
+          (lr-push stack (- sp 4) 43 goto-table $1)))
+    (lambda (stack sp goto-table $look)
       (let* (($3 (aref stack (- sp 1)))
              ($2 (aref stack (- sp 3)))
              ($1 (aref stack (- sp 5))))
-          (lr-push stack (- sp 6) 44 goto-table (cons $1 $3))))
-    (lambda (stack sp goto-table $lookahead)
+          (lr-push stack (- sp 6) 44 goto-table $1)))
+    (lambda (stack sp goto-table $look)
       (let* ()
           (lr-push stack (- sp 0) 45 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($2 (aref stack (- sp 1)))
              ($1 (aref stack (- sp 3))))
           (lr-push stack (- sp 4) 45 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($2 (aref stack (- sp 1)))
              ($1 (aref stack (- sp 3))))
           (lr-push stack (- sp 4) 45 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($2 (aref stack (- sp 1)))
              ($1 (aref stack (- sp 3))))
           (lr-push stack (- sp 4) 45 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($2 (aref stack (- sp 1)))
              ($1 (aref stack (- sp 3))))
           (lr-push stack (- sp 4) 45 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($2 (aref stack (- sp 1)))
              ($1 (aref stack (- sp 3))))
           (lr-push stack (- sp 4) 45 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($3 (aref stack (- sp 1)))
              ($2 (aref stack (- sp 3)))
              ($1 (aref stack (- sp 5))))
           (lr-push stack (- sp 6) 46 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* ()
           (lr-push stack (- sp 0) 47 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($2 (aref stack (- sp 1)))
              ($1 (aref stack (- sp 3))))
           (lr-push stack (- sp 4) 47 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($2 (aref stack (- sp 1)))
              ($1 (aref stack (- sp 3))))
           (lr-push stack (- sp 4) 47 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($2 (aref stack (- sp 1)))
              ($1 (aref stack (- sp 3))))
           (lr-push stack (- sp 4) 47 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($2 (aref stack (- sp 1)))
              ($1 (aref stack (- sp 3))))
           (lr-push stack (- sp 4) 47 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($2 (aref stack (- sp 1)))
              ($1 (aref stack (- sp 3))))
           (lr-push stack (- sp 4) 47 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($3 (aref stack (- sp 1)))
              ($2 (aref stack (- sp 3)))
              ($1 (aref stack (- sp 5))))
-          (lr-push stack (- sp 6) 48 goto-table (cons $1 $3))))
-    (lambda (stack sp goto-table $lookahead)
+          (lr-push stack (- sp 6) 48 goto-table ())))
+    (lambda (stack sp goto-table $look)
       (let* ()
           (lr-push stack (- sp 0) 49 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($2 (aref stack (- sp 1)))
              ($1 (aref stack (- sp 3))))
           (lr-push stack (- sp 4) 49 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($2 (aref stack (- sp 1)))
              ($1 (aref stack (- sp 3))))
           (lr-push stack (- sp 4) 49 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($2 (aref stack (- sp 1)))
              ($1 (aref stack (- sp 3))))
           (lr-push stack (- sp 4) 49 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($2 (aref stack (- sp 1)))
              ($1 (aref stack (- sp 3))))
           (lr-push stack (- sp 4) 49 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($2 (aref stack (- sp 1)))
              ($1 (aref stack (- sp 3))))
           (lr-push stack (- sp 4) 49 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($2 (aref stack (- sp 1)))
              ($1 (aref stack (- sp 3))))
           (lr-push stack (- sp 4) 49 goto-table ())))
-    (lambda (stack sp goto-table $lookahead)
+    (lambda (stack sp goto-table $look)
       (let* (($2 (aref stack (- sp 1)))
              ($1 (aref stack (- sp 3))))
           (lr-push stack (- sp 4) 49 goto-table ())))
