@@ -1,5 +1,11 @@
 1998-08-19  Tanaka Akira      <akr@jaist.ac.jp>
 
+	* ew-parse.el: Use lookahead token.
+
+	* ew-data.el (ew-mark-phrase): Decode last token in phrase.
+
+1998-08-19  Tanaka Akira      <akr@jaist.ac.jp>
+
 	* ew-parse.el: Remove token suffix "-tok".
 
 	* ew-data.el: Ditto.
